<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/warning_box"
    android:padding="30dp">

    <ImageView
        android:id="@+id/imgIconUser"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circular_container"
        android:backgroundTint="@color/gray1"
        android:contentDescription="@string/userIconDescription"
        android:src="@android:drawable/stat_sys_warning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/yellow1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/messageWarning"
        android:textSize="18sp"
        android:textColor="@color/gray9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCloseDialog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgIconUser"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnCloseDialog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circular_container"
        android:backgroundTint="@color/gray2"
        android:padding="8dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/red1"
        android:contentDescription="@string/closeWarning"/>

</androidx.constraintlayout.widget.ConstraintLayout>