<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchUserActivity"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/headerNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="28dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imgButtonGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/primary4"
            android:contentDescription="@string/btnTextGoBackDescription"
            android:src="@drawable/move_left" />

        <EditText
            android:id="@+id/edtSearchUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray1"
            android:textColorHint="@color/gray5"
            android:hint="@string/search"
            android:textSize="18sp"
            android:padding="12dp"
            android:maxLength="13"
            android:inputType="phone"
            android:autofillHints="phone" />
    </LinearLayout>

    <TextView
        android:id="@+id/txvInfoSearchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/searchTip"
        android:textColor="@color/gray8"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerNotification" />

    <ListView
        android:id="@+id/ltvUserList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:dividerHeight="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvInfoSearchUser"/>

</androidx.constraintlayout.widget.ConstraintLayout>